generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["postgresqlExtensions"]
}

generator express {
  provider = "prisma-generator-express"
}

generator erd_plantuml {
  provider                   = "prisma-generator-plantuml-erd"
  output                     = "../docs/erd.puml"
  exportPerTables            = false
  showUniqueKeyLabel         = true
  isShowForeignKeyOnRelation = true
}

datasource db {
  provider   = "postgresql"
  extensions = [postgis]
}

model TechnologicalCard {
  id                 BigInt     @id @default(autoincrement()) @map("id")
  hybridId           BigInt     @map("hybrid_id")
  enterpriseId       BigInt     @map("enterprise_id")
  plantingDensity    Int        @map("planting_density")
  plantingNormPerHa  Float      @map("planting_norm_per_ha")
  growthDurationDays Int        @map("growth_duration_days")
  appliedSeedWeight  Decimal    @map("applied_seed_weight")
  updatedAt          DateTime   @default(now()) @map("updated_at")
  deletedAt          DateTime?  @map("deleted_at")
  authorId           BigInt     @map("author_id")
  plantings          Planting[]
  author             User       @relation(fields: [authorId], references: [id])
  hybrid             Hybrid     @relation(fields: [hybridId], references: [id])
  enterprise         Enterprise @relation(fields: [enterpriseId], references: [id], onDelete: Cascade)

  @@index([enterpriseId])
  @@index([hybridId])
  @@index([authorId])
  @@map("technological_cards")
}

model Planting {
  id        BigInt            @id @default(autoincrement()) @map("id")
  startDate DateTime          @map("start_date") @db.Timestamptz(6)
  endDate   DateTime          @map("end_date") @db.Timestamptz(6)
  createdAt DateTime          @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt DateTime          @default(now()) @map("updated_at") @db.Timestamptz(6)
  tcId      BigInt            @map("tc_id")
  statusId  BigInt
  tc        TechnologicalCard @relation(fields: [tcId], references: [id], onDelete: Cascade)
  blocks    GreenhouseBlock[]
  status    PlantingStatus    @relation(fields: [statusId], references: [id])

  @@index([tcId])
  @@map("plantings")
}

model PlantingStatus {
  id        BigInt     @id @default(autoincrement()) @map("id")
  name      String     @unique @db.VarChar(128)
  plantings Planting[]

  @@index([id, name])
}

model User {
  id                  BigInt               @id @default(autoincrement()) @map("id")
  firstName           String               @map("first_name") @db.VarChar(128)
  lastName            String               @map("last_name") @db.VarChar(128)
  email               String               @unique @map("email") @db.VarChar(256)
  hash                String               @map("hash") @db.VarChar(256)
  updatedAt           DateTime             @default(now()) @map("updated_at") @db.Timestamptz(6)
  blockedAt           DateTime?            @map("blocked_at")
  blockedReason       String?              @map("blocked_reason")
  sessions            Session[]
  userRoleAssignments UserRoleAssignment[]
  technologicalCards  TechnologicalCard[]
  ownedEnterprises    Enterprise[]         @relation("EnterpriseOwner")
  enterprises         Enterprise[]         @relation("EnterpriseMembers")

  @@index([email], map: "email_unique")
  @@map("users")
}

model UserRoleAssignment {
  id           BigInt     @id @default(autoincrement()) @map("id")
  userId       BigInt     @map("user_id")
  userRoleId   BigInt     @map("user_role_id")
  enterpriseId BigInt     @map("enterprise_id")
  enterprise   Enterprise @relation(fields: [enterpriseId], references: [id], onDelete: Cascade)
  user         User       @relation(fields: [userId], references: [id], onDelete: Cascade)
  role         UserRole   @relation(fields: [userRoleId], references: [id], onDelete: Cascade)
  assignedAt   DateTime   @default(now()) @db.Timestamptz(6)
  revokedAt    DateTime?  @db.Timestamptz(6)

  @@index([userId, userRoleId, enterpriseId])
  @@map("user_role_assignments")
}

model UserRole {
  id                  BigInt               @id @default(autoincrement()) @map("id")
  name                String               @unique @map("name") @db.VarChar(64)
  userRoleAssignments UserRoleAssignment[]

  @@map("user_roles")
}

model Session {
  id               BigInt    @id @default(autoincrement()) @map("id")
  userId           BigInt    @map("user_id")
  refreshTokenHash String?   @map("refresh_token_hash")
  createdAt        DateTime? @default(now()) @map("created_at") @db.Timestamptz(6)
  expiresAt        DateTime  @map("expires_at") @db.Timestamptz(6)
  user             User      @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("sessions")
}

model Enterprise {
  id                  BigInt                   @id @default(autoincrement()) @map("id")
  name                String                   @unique @map("enterprise_name") @db.VarChar(128)
  shape               Unsupported("geometry")? @map("shape")
  updatedAt           DateTime                 @default(now()) @map("created_at") @db.Timestamptz(6)
  participants        User[]                   @relation("EnterpriseMembers")
  owner               User                     @relation("EnterpriseOwner", fields: [ownerId], references: [id])
  ownerId             BigInt
  userRoleAssignments UserRoleAssignment[]
  technologicalCards  TechnologicalCard[]
  greenhouseBlocks    GreenhouseBlock[]

  @@unique([id, name])
  @@index([ownerId])
  @@map("enterprises")
}

model GreenhouseBlock {
  id           BigInt       @id @default(autoincrement()) @map("id")
  enterpriseId BigInt       @map("enterprise_id")
  soilId       BigInt?      @map("soil_id")
  deletedAt    DateTime?    @map("deleted_at")
  enterprise   Enterprise   @relation(fields: [enterpriseId], references: [id], onDelete: Cascade)
  greenhouses  Greenhouse[]
  plantings    Planting[]
  soil         Soil?        @relation(fields: [soilId], references: [id])

  @@map("greenhouse_blocks")
}

model Greenhouse {
  id                  BigInt                   @id @default(autoincrement()) @map("id")
  blockId             BigInt?                  @map("gh_block_id")
  shapeTypeId         BigInt                   @map("gh_shape_type_id")
  materialId          BigInt                   @map("gh_material_id")
  hasArtificialLights Boolean                  @map("has_artificial_lights")
  hasVentilation      Boolean                  @map("has_ventilation")
  shape               Unsupported("geometry")? @map("shape")
  deletedAt           DateTime?                @map("deleted_at")
  block               GreenhouseBlock?         @relation(fields: [blockId], references: [id])
  material            GreenhouseMaterial       @relation(fields: [materialId], references: [id])
  shapeType           GreenhouseShape          @relation(fields: [shapeTypeId], references: [id])

  @@index([blockId])
  @@index([shapeTypeId])
  @@index([materialId])
  @@index([hasArtificialLights])
  @@index([hasVentilation])
  @@map("greenhouses")
}

model GreenhouseMaterial {
  id           BigInt       @id @default(autoincrement()) @map("id")
  materialName String       @unique @map("material_name") @db.VarChar(128)
  greenhouses  Greenhouse[]

  @@unique([id, materialName])
  @@map("greenhouse_materials")
}

model GreenhouseShape {
  id           BigInt       @id @default(autoincrement()) @map("id")
  name         String       @unique @map("name") @db.VarChar(128)
  isExtensible Boolean      @map("is_extensible")
  greenhouses  Greenhouse[]

  @@index([id, name])
  @@index([isExtensible])
  @@map("greenhouse_shapes")
}

model Soil {
  id                BigInt            @id @default(autoincrement()) @map("id")
  name              String            @unique @map("name") @db.VarChar(128)
  bulkDensity       Float             @map("soil_bulk_density")
  porosity          Float             @map("soil_porosity")
  layerSpecificMass Float             @map("soil_layer_specific_mass")
  fieldCapacity     Float             @map("soil_field_capacity")
  acidity           Float             @map("soil_acidity")
  cultures          Culture[]
  greenhouseBlocks  GreenhouseBlock[]

  @@index([id, name])
  @@map("soils")
}

model Culture {
  id      BigInt   @id @default(autoincrement()) @map("id")
  name    String   @unique @map("name") @db.VarChar(128)
  hybrids Hybrid[]
  soils   Soil[]

  @@index([id, name])
  @@map("crops")
}

model Hybrid {
  id                     BigInt              @id @default(autoincrement()) @map("id")
  name                   String              @map("name") @db.VarChar(128)
  weight1000Seeds        Decimal             @map("weight_1000_seeds")
  growthFactor           Decimal             @map("growth_factor")
  disallowedPredecessors Hybrid[]            @relation("HybridPredecessors")
  predecessorFor         Hybrid[]            @relation("HybridPredecessors")
  culture                Culture?            @relation(fields: [cultureId], references: [id])
  technologicalCards     TechnologicalCard[]
  cultureId              BigInt?

  @@index([id, name])
  @@map("hybrids")
}
